# Qt-Interfa

./: CMakeLists.txt  functions.cpp  functions.cpp.autosave  functions.h  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  stdafx.h  timer.cpp  timer.h
